# wgsl_playground

./: .gitignore  Cargo.toml  bacon.toml  config.ron
assets/: blank.wgsl  blit.wgsl  bubbles.wgsl  plane.mtl  recolor.wgsl  sdf.wgsl  sdf_explanation.wgsl  shader.wgsl  simple.wgsl  title.wgsl  ui.wgsl
assets/lib/: sdf.wgsl
assets/lib/noise/: perlin.wgsl  simplex.wgsl  value.wgsl  voronoi.wgsl
assets/lib/utils/: fmod.wgsl  gen_triangle_vs.wgsl
assets/lib/utils/hash/: pcg.wgsl  rand.wgsl  xxhash.wgsl
examples/: square_cloth.rs
font2sdf/: .gitignore  Cargo.toml
font2sdf/src/: main.rs
gltests/: main.rs
macros/: .gitignore  Cargo.toml
macros/src/: lib.rs
macros/tests/: generate_wgsl_enum.rs
src/: camera.rs  geometry.rs  lib.rs  main.rs  model.rs  mouse.rs  qol.rs  shader.rs  shader.wgsl  shader_graph.rs  texture.rs  timer.rs  tree.rs  utils.rs
src/ui/: arbre.rs  dot.rs  element.rs  font.rs  mod.rs  shapes.rs
