[package]
name = "wgsl_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
env_logger = "0.10"
glam = { version = "0.28.0", features = ["bytemuck"] }
image = { version = "0.25.1", features = ["png", "jpeg"] }
log = "0.4"
notify = "6.1.1"
pollster = "0.3.0"
ron = "0.8.1"
seq-macro = "0.3.5"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "1.0.61"
wgpu = "22.1.0"
winit = { version = "0.29.15", features = ["rwh_05"] }
indoc = "2.0.5"
easy-signed-distance-field = { version = "0.1.1", features = ["font"] }
strum = { version = "0.26.3", features = ["derive"] }

[dependencies.macros]
path = "macros/"

[build-dependencies]
anyhow = "1.0.86"
fs_extra = "1.3.0"

[dev-dependencies]
futures = "0.3.30"
indoc = "2.0.5"
mktemp = "0.5.1"
#
# [[test]]
# name = "gltests"
# path = "gltests/main.rs"
# harness = false
